pulsefit-appointment-dashboard/src/index.scss
@use './styles/variables.scss' as *;

body {
  margin: 0;
  min-width: 320px;
  min-height: 100vh;
  background-color: $color-background;
  font-family: $font-family;
  font-size: $font-size;
  font-weight: $font-weight-regular;
  line-height: $line-height;

  h1 {
    font-size: $font-size-heading;
  }

  h2 {
    font-size: $font-size-subheading;
  }
}

